# voice_controlled_robot

./: .gitignore  README.md  pyproject.toml  requirements.txt  robot_continuous_loop.py  robot_modelfile  robot_voice_control_plan.txt  test_robot_parser.py  voice_to_robot.py
src/robot_voice_control/: robot_continuous_loop.py  ros_interface.py  test_robot_parser.py  voice_to_robot.py
